Fix requirements for notebook.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/notebooks/MultirotorRefTraj.ipynb
+++ b/notebooks/MultirotorRefTraj.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "DM([-0.0376079, 0.170361, 0.00590173])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "'gen.c'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16.6 µs ± 153 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "16.4 µs ± 219 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.2 µs ± 61.1 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "18.1 µs ± 57.1 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "             cos(φ) "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv-cerebri",
    "language": "python",
    "name": "python3"
   },
@@ -360,7 +360,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b85317a6a547cfccf7118c3a7bd8c99c1a6962a272b17ec2f4fe2604f9280ead"
+    "hash": "6f8c6a2701ff858a9500c9823f2a52ed6c828807290419467f8a5e8e275531dc"
    }
   }
  },
